# libnss-mapper-rs

./: Cargo.toml  Dockerfile  README.md  build.sh  rust-toolchain.toml
.cargo/: config.toml
assets/: nssmapper-example.conf
debian/: postinst  postrm
src/: lib.rs  mapper_password.rs  mapper_shadow.rs  search_entry.rs
